<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="fi.aalto_iot.tomato.activity.room.Room_default_fragment">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/generic_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <!-- Occupied status -->
            <RelativeLayout
                android:id="@+id/occupied_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/room_status_indicator_circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/room_status_indicator_occupied" />
                <TextView
                    android:id="@+id/room_status_indicator_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/room_status_indicator_circle"
                    android:text="@string/unknown" />

            </RelativeLayout>
            <!-- Air quality status -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/occupied_layout"
                android:layout_toRightOf="@+id/occupied_layout"
                android:layout_gravity="right"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">

                <ImageView
                    android:id="@+id/room_air_indicator_circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/room_status_indicator_occupied" />
                <TextView
                    android:id="@+id/room_air_indicator_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/room_air_indicator_circle"
                    android:layout_toRightOf="@+id/room_air_indicator_circle"
                    android:text="@string/unknown" />

            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detail_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <!-- Temperature -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/room_temperature_indicator_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/temperature" />

                <!-- header + bars + names for them -->
                <RelativeLayout
                    android:id="@+id/temperature_bar_all"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="0dp">
                    <TextView
                        android:id="@+id/temperature_bar_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_level_header"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/temperature_bar_header">
                        <ImageView
                            android:id="@+id/temperature_bar_1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/temperature_bar_2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/temperature_bar_3"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/temperature_bar_4"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/temperature_bar_5"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/temperature_text"
                    android:layout_width="@dimen/room_fragment_data_value"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/room_temperature_value"
                    android:textSize="24sp"/>
            </LinearLayout>

            <!-- Humidity -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/room_humidity_indicator_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/humidity" />

                <!-- header + bars + names for them -->
                <RelativeLayout
                    android:id="@+id/humidity_bar_all"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="match_parent">
                    <TextView
                        android:id="@+id/humidity_bar_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity_level_header"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/humidity_bar_header">
                        <ImageView
                            android:id="@+id/humidity_bar_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/humidity_bar_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/humidity_bar_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/humidity_bar_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/humidity_bar_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/humidity_text"
                    android:layout_width="@dimen/room_fragment_data_value"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/room_humidity_value"
                    android:textSize="24sp"/>
            </LinearLayout>

            <!-- CO2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/room_co2_indicator_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/co2" />

                <!-- header + bars + names for them -->
                <RelativeLayout
                    android:id="@+id/co2_bar_all"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/co2_bar_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/co2_level_header"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/co2_bar_header">
                        <ImageView
                            android:id="@+id/co2_bar_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/co2_bar_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/co2_bar_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/co2_bar_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                        <ImageView
                            android:id="@+id/co2_bar_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_bar"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            android:src="@drawable/scale_dash_off"/>
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/co2_text"
                    android:layout_width="@dimen/room_fragment_data_value"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/room_co2_value"
                    android:textSize="24sp"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
