<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeContainerRoomHistory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/tabs">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/history_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="fi.aalto_iot.tomato.activity.room.Room_history_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/motion_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/motion_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/motion_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="16dp"
                            android:src="@drawable/ic_home_black_36dp"
                            android:alpha="0.54" />

                        <TextView
                            android:id="@+id/motion_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/motion_icon"
                            android:layout_toRightOf="@+id/motion_icon"
                            android:text="@string/room_fragment_history_occupation_header"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/motion_time_interval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/motion_icon"
                            android:layout_toRightOf="@+id/motion_icon"
                            android:text="@string/unknown" />

                    </RelativeLayout>

                    <fi.aalto_iot.tomato.activity.room.view.RoomHistoryOccupationCanvasView
                        android:id="@+id/motion_canvasView"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layerType="software"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/temperature_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/temperature_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/temperature_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="16dp"
                            android:src="@drawable/temperature"
                            android:alpha="0.54" />

                        <TextView
                            android:id="@+id/temperature_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/temperature_icon"
                            android:layout_toRightOf="@+id/temperature_icon"
                            android:text="@string/room_fragment_history_temperature_header"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/temperature_time_interval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/temperature_icon"
                            android:layout_toRightOf="@+id/temperature_icon"
                            android:text="@string/unknown" />

                    </RelativeLayout>

                    <fi.aalto_iot.tomato.activity.room.view.RoomHistoryCanvasView
                        android:id="@+id/temperature_canvasView"
                        android:layout_width="match_parent"
                        android:layout_height="190dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/humidity_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/humidity_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/humidity_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="16dp"
                            android:src="@drawable/humidity"
                            android:alpha="0.54" />

                        <TextView
                            android:id="@+id/humidity_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/humidity_icon"
                            android:layout_toRightOf="@+id/humidity_icon"
                            android:text="@string/room_fragment_history_humidity_header"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/humidity_time_interval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/humidity_icon"
                            android:layout_toRightOf="@+id/humidity_icon"
                            android:text="@string/unknown" />

                    </RelativeLayout>

                    <fi.aalto_iot.tomato.activity.room.view.RoomHistoryCanvasView
                        android:id="@+id/humidity_canvasView"
                        android:layout_width="match_parent"
                        android:layout_height="190dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/co2_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/co2_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/co2_icon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="16dp"
                            android:src="@drawable/co2"
                            android:alpha="0.54" />

                        <TextView
                            android:id="@+id/co2_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/co2_icon"
                            android:layout_toRightOf="@+id/co2_icon"
                            android:text="@string/room_fragment_history_co2_header"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/co2_time_interval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/co2_icon"
                            android:layout_toRightOf="@+id/co2_icon"
                            android:text="@string/unknown" />

                    </RelativeLayout>

                    <fi.aalto_iot.tomato.activity.room.view.RoomHistoryCanvasView
                        android:id="@+id/co2_canvasView"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:layerType="software"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>